Fix spacing and order for the course list controls. For #409.

--- a/src/scss/components/_course-list.scss
+++ b/src/scss/components/_course-list.scss
@@ -1,18 +1,18 @@
 .paragraph--course-list {
   .section__header {
-    margin-bottom: 0;
-    border-bottom: 1px solid $border-color;
+    margin-bottom: $spacing-5;
   }
 
   .course-list--filters {
     display: flex;
     flex-direction: column;
     margin-top: $spacing-5;
+    border-bottom: 1px solid #dedede;
 
     @include breakpoint(md) {
       flex-direction: row;
-      margin-top: $spacing-7;
-      margin-bottom: $spacing-5;
+      margin-top: $spacing-2;
+      padding-bottom: $spacing-4;
 
       .checkbox--filter:not(:last-child) {
         margin-right: $spacing-7;
@@ -21,7 +21,7 @@
 
     .radio__label {
       font-weight: $font-weight-normal;
-      font-size: $typescale-3;
+      font-size: $typescale-2;
       line-height: $line-height-solid;
       align-items: center;
       padding: 0;
@@ -35,6 +35,11 @@
         margin-bottom: 0;
       }
     }
+  }
+
+  .course-list--text {
+    margin-bottom: $spacing-2;
+    font-size: $typescale-2;
   }
 }
 
